# hdr-image-viewer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  run.sh
cmake/: FindLibRaw.cmake
resources/: app.qrc
src/: app.cpp  app.h  color_management.cpp  color_management.h  file_detector.cpp  file_detector.h  main.cpp
src/qml/: ImageViewer.qml  KeyboardHandler.qml  Main.qml  WindowManager.qml
